--- a/src/pynxtools_spm/nomad/examples/stm/config.json
+++ b/src/pynxtools_spm/nomad/examples/stm/config.json
@@ -1,7 +1,7 @@
 {
     "ENTRY[entry]": {
-        "@defaut": {
-            "raw_path": "@default:/entry/experiment_instrument/scan_environment/scan_control/mesh_scan/current_backward"
+        "@default": {
+            "raw_path": "@default:current_backward"
         },
         "collection_identifier": "",
         "definition": "",
