--- a/tests/data/nanonis/sts/version_gen_4_5/eln_data.yaml
+++ b/tests/data/nanonis/sts/version_gen_4_5/eln_data.yaml
@@ -77,7 +77,7 @@ experiment_instrument:
       '@version': null
     vendor: null
   piezo_sensor:
-    piezo_configuration::
+    piezo_configuration:
       calibration:
         calibration_type: 'Active'
         calibration_name: '4k'
