--- a/src/pynxtools_spm/nomad/examples/sts/STSDefaultExample/STS.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/examples/sts/STSDefaultExample/STS.scheme.archive.yaml
@@ -8,7 +8,7 @@ definitions:
       m_annotations:
         template:
           reader: spm
-          nxdl: NXsts
+          nxdl: NXspm
         eln:
           hide: []
       quantities:
