--- a/src/pynxtools_spm/nomad/examples/afm/AFMDefaultExample/AFM.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/examples/afm/AFMDefaultExample/AFM.scheme.archive.yaml
@@ -1,7 +1,7 @@
 definitions:
   name: An ELN example for AFM ( Atomic Force Microscopy).
   sections:
-    sts:
+    afm:
       base_sections:
         - pynxtools.nomad.dataconverter.NexusDataConverter
         - nomad.datamodel.data.EntryData
@@ -198,40 +198,37 @@ definitions:
                           component: StringEditQuantity
                       description: |
                         If model has a distinquishable version (e.g. BP5e).
-              scan_environment:
+              height_piezo_sensor:
                 section:
                   m_annotations:
                     eln:
                       overview: true
-                  quantities:
-                    tip_temp:
-                      type: np.float64
-                      m_annotations:
-                        eln:
-                          component: NumberEditQuantity
-                          defaultDisplayUnit: K
-                      description: |
-                        Temperature of STM head. Note: At least one field from tip_temp,
-                        cryo_bottom_temp and cryo_shield_temp must be provided.
-                        At least one field from tip_temp, cryo_bottom_temp and cryo_shield_temp must be provided.
-                    cryo_bottom_temp:
-                      type: np.float64
-                      m_annotations:
-                        eln:
-                          component: NumberEditQuantity
-                          defaultDisplayUnit: K
-                      description: |
-                        Temperature of the cold tail of the cryostat. Note: 
-                        At least one field from tip_temp, cryo_bottom_temp and cryo_shield_temp must be provided.
-                    cryo_shield_temp:
-                      type: np.float64
-                      m_annotations:
-                        eln:
-                          component: NumberEditQuantity
-                          defaultDisplayUnit: K
-                      description: |
-                        Temperature of liquid nitrogen shield. Note: At
-                        least one field from tip_temp, cryo_bottom_temp and cryo_shield_temp.
+                  sub_sections:
+                    piezo_configuration:
+                      section:
+                        m_annotations:
+                          eln:
+                            overview: true
+                        sub_sections:
+                          piezo_material:
+                            section:
+                              m_annotations:
+                                eln:
+                                  overview: true
+                              sub_sections:
+                                piezo_material_identifier:
+                                  section:
+                                    m_annotations:
+                                      eln:
+                                        overview: true
+                                    quantities:
+                                      identifier:
+                                        type: str
+                                        m_annotations:
+                                          eln:
+                                            component: StringEditQuantity
+                                        description: |
+                                          An unique identifier for the piezo material.
         Sample:
           section:
             m_annotations:
@@ -276,15 +273,67 @@ definitions:
                     component: RichTextEditQuantity
                 description: |
                   Description of the sample or sample preparation.
-              sample_component:
-                type: str
-                shape: "*"
-                m_annotations:
-                  eln:
-                    component: StringEditQuantity
-                description: |
-                  The components of the sample comes as a list of components.
             sub_sections:
+              sample_component_set:
+                section:
+                  m_annotations:
+                    eln:
+                      overview: true
+                  sub_sections:
+                    sample_component:
+                      section:
+                        m_annotations:
+                          eln:
+                            overview: true
+                        description: |
+                          A sample component is a part of the sample that is of interest.
+                          For example, a sample component could be a layer of a multilayer sample.
+                        quantities:
+                          name:
+                            type: str
+                            m_annotations:
+                              eln:
+                                component: StringEditQuantity
+                            description: |
+                              Name of the sample component.
+                          sample_id:
+                            type: str
+                            m_annotations:
+                              eln:
+                                component: StringEditQuantity
+                            description: |
+                              An unique identifier for the sample component.
+                          chemical_formula:
+                            type: str
+                            m_annotations:
+                              eln:
+                                component: StringEditQuantity
+                            description: |
+                              The chemical formula specified using CIF conventions.
+                              Abbreviated version of CIF standard:
+                              
+                              * Only recognized element symbols may be used.
+                              * Each element symbol is followed by a 'count' number. A count of '1' may be omitted.
+                              * A space or parenthesis must separate each cluster of (element symbol + count).
+                              * Where a group of elements is enclosed in parentheses, the multiplier for the
+                                group must follow the closing parentheses. That is, all element and group
+                                multipliers are assumed to be printed as subscripted numbers.
+                              * Unless the elements are ordered in a manner that corresponds to their chemical
+                                structure, the order of the elements within any group or moiety depends on
+                                whether or not carbon is present.
+                              * If carbon is present, the order should be:
+                              
+                                - C, then H, then the other elements in alphabetical order of their symbol.
+                                - If carbon is not present, the elements are listed purely in alphabetic order of their symbol.
+                                
+                              * This is the *Hill* system used by Chemical Abstracts.
+                          description:
+                            type: str
+                            m_annotations:
+                              eln:
+                                component: RichTextEditQuantity
+                            description: |
+                              Description of the sample component or sample preparation.
               History:
                 section:
                   m_annotations:
