--- a/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/eln_data.yaml
+++ b/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/eln_data.yaml
@@ -1,31 +1,32 @@
 Sample:
   History:
     notes: <p>Sample history goes here.</p>
-  description: <p>Sample description goes here.</p>
-  name: DemoSample
+  description: <p>Sample Description</p>
+  name: DemoName
+  sample_component_set:
+    sample_component:
+      description: <p>Sample component description.</p>
+      name: Sample Component
 collection_identifier:
-  identifier: DemoCollectionIdentifier-12345
+  identifier: STSCollectionIdentifier-1
 default: current_grad
 definition: NXsts
-experiment_description: <p>The experiment description goes here.</p>
+experiment_description: <p>Experiment description is here.</p>
 experiment_identifier:
-  identifier: DemoExperimentIdentifier-12345
+  identifier: STSExperimentIdentifier-1
 experiment_instrument:
   hardware:
-    model: Generic 5e
-    model/@version: 5e
     name: Nanonis
     vendor: Nanonis
   lockin_amplifier:
     lockin_current_flip_sign: -1.0
-    modulation_signal: Current
+    modulation_signal: current
   scan_environment:
     tip_temp:
       unit: K
       value: 100.0
   software:
     model: Generic 5e
-    model/@version: 5e
     name: Nanonis
     vendor: Nanonis
 experiment_technique: STS
