--- a/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
+++ b/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
@@ -1,30 +1,29 @@
 Sample:
   History:
-    notes: <p>History of sample component goes here.</p>
-  description: <p>Sample description goes here.</p>
+    notes: <p>Sample history goes here.</p>
+  description: <p>Sample description is here.</p>
   name: DemoSample
+  sample_component_set:
+    sample_component:
+      description: <p>Description of the sample component</p>
+      name: DemoSampleComponent
 collection_identifier:
-  identifier: DemoCollectionIdentifier-1234
+  identifier: STSCollectionIdentifier-1234
 default: current_grad
 definition: NXsts
-experiment_description: <p>The expriment description goes here.</p>
+experiment_description: <p>The experiment description is here.</p>
 experiment_identifier:
-  identifier: DemoExperimentIdentifier-1234
+  identifier: STSExperimentIdentifier-1234
 experiment_instrument:
   hardware:
-    model: Generic5e
-    model/@version: 5e
+    model: Generic 5e
     name: Nanonis
     vendor: Nanonis
   lockin_amplifier:
     lockin_current_flip_sign: -1.0
-    modulation_signal: Current
-  scan_environment:
-    tip_temp:
-      unit: K
-      value: 10.0
+    modulation_signal: current
   software:
-    model: Generic5e
+    model: Generic 5e
     model/@version: 5e
     name: Nanonis
     vendor: Nanonis
@@ -34,4 +33,4 @@ user:
   - HU
   email:
   - rubel.mozumder@physik.hu-berlin.de
-  name: Rubel Mozumder
+  name: Rubel Mozumer
