--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -24,7 +24,7 @@ jobs:
           python -m pip install -r dev-requirements.txt
       - name: ruff
         run: |
-          ruff pynxtools_spm tests
+          ruff check pynxtools_spm tests
       - name: ruff formatting
         run: |
           ruff format --check pynxtools_spm tests
