--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,7 @@
+prune *
+exclude *
+recursive-include src *.py *.json *.md *.txt 
+
+include pyproject.toml LICENSE README.md requirements.txt dev-requirements.txt mkdocs.yml
+
 recursive-include src/pynxtools_spm/examples **
