Manifest and update pynxtools version.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,5 @@
 prune *
 exclude *
-recursive-include src *.py *.json *.md *.txt 
+recursive-include src *.py *.json *.md *.txt *.sxm *.nxs *.yaml *.dat *.yml
 
 include pyproject.toml LICENSE README.md requirements.txt dev-requirements.txt mkdocs.yml
-
-recursive-include src/pynxtools_spm/examples **
