update manifest and requirements. (#4)
* update manifest and requirements.

* Manifest and update pynxtools version.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,5 @@
-recursive-include src/pynxtools_spm/examples **
+prune *
+exclude *
+recursive-include src *.py *.json *.md *.txt *.sxm *.nxs *.yaml *.dat *.yml
+
+include pyproject.toml LICENSE README.md requirements.txt dev-requirements.txt mkdocs.yml
