--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,8 @@ jobs:
         run: python -m build
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          verbose: true
         # with:
         #   user: __token__
         #   password: ${{secrets.PYPI_API_TOKEN}}
