--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,15 @@ docs = [
 [project.entry-points."pynxtools.reader"]
 spm = "pynxtools_spm.reader:SPMReader"
 
+[project.entry-points."nomad.plugin"]
+sts_default_example = "pynxtools_spm.nomad.entrypoints:sts_default_example"
+sts_example_with_customization = "pynxtools_spm.nomad.entrypoints:sts_example_with_customization"
+stm_default_example = "pynxtools_spm.nomad.entrypoints:stm_default_example"
+stm_example_with_customization = "pynxtools_spm.nomad.entrypoints:stm_example_with_customization"
+afm_default_example = "pynxtools_spm.nomad.entrypoints:afm_default_example" 
+afm_example_with_customization = "pynxtools_spm.nomad.entrypoints:afm_example_with_customization"   
+
+
 [tool.setuptools.packages.find]
 where = ["src"]
 # include = ["src/pynxtools_spm"]
